add: docker-compose file and dockerfile

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "store_front_api",
   "version": "1.0.0",
   "description": "an api for small e-commerce",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "start:watch": "ts-node-dev index.ts",
-    "start:prod": "node dist/index.js",
+    "start": "ts-node ./src/index.ts",
+    "start:watch": "ts-node-dev ./src/index.ts",
+    "start:prod": "npm run build && node dist/index.js",
     "build": "rm -rf ./dist/* && tsc --build",
     "migrate:up": "db-migrate up",
     "migrate:down": "db-migrate down",
